(lang dune 2.5)
(name mlpystring)
(version 0.0.0)
(generate_opam_files true)

(source (github ChanTsune/mlpystring))
(license MIT)
(authors "ChanTsune")
(maintainers "ChanTsune")

(package
 (name mlpystring)
 (synopsis "An OCaml library for Python like string operation")
 (description "A library that provides methods equivalent to Python3's str class in OCaml.")
 (depends
  (ocaml (>= 4.03))
  (dune (> 2.5))
  (ounit2 :with-test)
 )
)
